...
    if (LocalUseNavigationRail.current) {
        NavigationRail {
            NavigationRailItem(
                selected = selected == BottomTab.Dashboard,
                onClick = onDashboardClick,
                icon = { Icon(Icons.Default.Dashboard, contentDescription = null) },
                label = { Text("Home") },
            )
            NavigationRailItem(
                selected = selected == BottomTab.Search,
                onClick = onSearchClick,
                icon = { Icon(Icons.Default.Search, contentDescription = null) },
                label = { Text("Search") },
...
